--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/google-fonts": "3.2.0",
+    "@pinia/nuxt": "0.9.0",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   },
